fixed overflow issue in Sidbar component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,7 +47,3 @@ footer {
   color: gold;
 }
 
-
-main, section {
-  overflow-y: hidden;
-}
