--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ html, body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 /**
@@ -46,9 +47,39 @@ code {
     monospace;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  .project {
+    border-bottom: solid 0.2em #333;
+    background: #fff;
+    width: 100%;
+    margin: 0.2em;
+    display: flex;
+    padding: 0.9em;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  }
+}
 
-#root {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .project {
+    border-bottom: solid 0.2em #333;
+    background: #fff;
+    width: 100%;
+    margin: 0.2em;
+    display: flex;
+    padding: 0.9em;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  }
+}
+
+@media (min-width: 1024px) {
+  .project {
+    border-bottom: solid 0.2em #333;
+    background: #fff;
+    width: 49%;
+    margin: 0.2em;
+    display: flex;
+    padding: 0.9em;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  }
 }
